grammar.js
        source_file: $ => seq(
            repeat($._source_unit),
        ),

        //  -- [ Source Element ] --
        _source_unit: $ =>  choice(
            $._directive,
            $._declaration,
        ), 

        //  -- [ Directives ] --
        contract_declaration: $ => seq(
            optional('abstract'),
            'contract',
            field("name", $.identifier),
            optional($._class_heritage),
            field('body', $.contract_body),
        ),

        error_declaration: $ => seq(
            'error', 
            field("name", $.identifier), 
            '(', commaSep($.error_parameter), ')',
            $._semicolon
        ),

        error_parameter: $ => seq(
            field("type", $.type_name), 
            field("name", optional($.identifier)),
        ),

        _class_heritage: $ => seq(
            "is",
            commaSep1($.inheritance_specifier)
        ),

        inheritance_specifier: $ => seq(
            field("ancestor", $.user_defined_type),
            optional(field("ancestor_arguments", $._call_arguments)),
        ),

        contract_body: $  => seq(
            "{",
            repeat($._contract_member),   
            "}",
        ),

        _contract_member: $ => choice(
            $.function_definition,
            $.modifier_definition,
            $.error_declaration,
            $.state_variable_declaration,
            $.struct_declaration,
            $.enum_declaration,
            $.event_definition,
            $.using_directive,
            $.constructor_definition,
            $.fallback_receive_definition,
            $.user_defined_type_definition,
        ),

        enum_declaration: $ =>  seq(
            'enum',
            field("name", $.identifier),
            field('body', $.enum_body),
        ),

        enum_body: $ => seq(
            '{',
            commaSep(alias($.identifier, $.enum_value)),
            '}',
        ),

        event_definition: $ => seq(
            'event', 
            field('name', $.identifier),
            $._event_parameter_list ,
            optional('anonymous'), 
            $._semicolon
        ),

        _event_parameter_list: $ => seq(
            "(",
            commaSep($.event_paramater),
            ")"
        ),

        _statement: $ => choice(
            $.block_statement,
            $.expression_statement,
            $.variable_declaration_statement,
            $.if_statement,
            $.for_statement,
            $.while_statement,
            $.do_while_statement,
            $.continue_statement,
            $.break_statement,
            $.try_statement,
            $.return_statement,
            $.emit_statement,
            $.assembly_statement,
            $.revert_statement,
        ),

        variable_declaration_statement: $ => prec(1,seq(
                choice(
                    seq($.variable_declaration, optional(seq('=', field("value", $._expression)))),
                    seq($.variable_declaration_tuple, '=', field("value", $._expression)),
                ),
                $._semicolon
        )),

        variable_declaration: $ => seq(
            field("type", $.type_name),
            field("location", optional(choice('memory', 'storage', 'calldata'))),
            field('name', $.identifier)
        ),

        expression_statement: $ => seq($._expression, $._semicolon),

        revert_statement: $ => prec(PREC.REVERT, seq(
            'revert',
            optional(field("error", $._expression)), 
            optional(alias($._call_arguments, $.revert_arguments)),
            $._semicolon
        )),

        override_specifier: $ => seq(
            'override',
            optional(seq(
                '(',
                commaSep1($.user_defined_type),
                ')',
            ))
        ),

        fallback_receive_definition: $ => seq(
            choice(seq(
                // optional("function"),
                choice('fallback', 'receive', 'function'),
                ),
                "function"
            ),
            // #todo: only fallback should get arguments
            $._parameter_list,
            // FIXME: We use repeat to allow for unorderedness. However, this means that the parser
            // accepts more than just the solidity language. The same problem exists for other definition rules.
            repeat(choice(
                $.visibility,
                $.modifier_invocation,
                $.state_mutability,
                $.virtual,
                $.override_specifier,
            )),
            choice($._semicolon, field('body', $.function_body))
        ),

        function_definition: $ => seq(
            "function",
            field("name", $.identifier),
            $._parameter_list,
            repeat(choice(
                $.modifier_invocation,
                $.visibility,
                $.state_mutability,
                $.virtual,
                $.override_specifier,
            )),
            field("return_type", optional($.return_type_definition)),
            choice($._semicolon, field('body', $.function_body))
        ),

        virtual: $ => "virtual",
        modifier_invocation: $ => seq($._identifier_path, optional($._call_arguments)),

        _call_arguments: $ => prec(4,
            seq(
                '(',
                commaSep($.call_argument),
                ')'
            ),
        ),

        call_argument: $ => choice(
            $._expression,
            seq("{", commaSep($.call_struct_argument), "}"),
        ),
        call_struct_argument: $ => seq(
            field("name", $.identifier), 
            ":", 
            field("value", $._expression)
        ),

        function_body: $ => seq(
            "{",
                repeat($._statement),
            "}",
        ),

        // Expressions
        _expression: $ => choice(
            $.binary_expression,
            $.unary_expression,
            $.update_expression,
            $.call_expression,
            // TODO: $.function_call_options_expression,
            $.payable_conversion_expression,
            $.meta_type_expression,
            $._primary_expression,
            $.struct_expression,
            $.ternary_expression,
            $.type_cast_expression,
        ),

        type_cast_expression: $ => prec.left(seq($.primitive_type,  $._call_arguments)),

        ternary_expression: $ => prec.left(seq($._expression, "?", $._expression, ':', $._expression)),

        // TODO: make sure call arguments are part of solidity
        new_expression: $ => prec.left(seq('new', field("name", $.type_name), optional($._call_arguments))),

        tuple_expression: $ => prec(1, seq('(', commaSep(optional($._expression)), ')' )),

        inline_array_expression: $ => seq('[', commaSep($._expression), ']' ),

        binary_expression: $ => choice(
            ...[
            ['&&', PREC.AND],
            ['||', PREC.OR],
            ['>>', PREC.TIMES],
            ['>>>', PREC.TIMES],
            ['<<', PREC.TIMES],
            ['&', PREC.AND],
            ['^', PREC.OR],
            ['|', PREC.OR],
            ['+', PREC.PLUS],
            ['-', PREC.PLUS],
            ['*', PREC.TIMES],
            ['/', PREC.TIMES],
            ['%', PREC.TIMES],
            ['**', PREC.EXP],
            ['<', PREC.REL],
            ['<=', PREC.REL],
            ['==', PREC.REL],
            ['!=', PREC.REL],
            ['!==', PREC.REL],
            ['>=', PREC.REL],
            ['>', PREC.REL],
            ].map(([operator, precedence]) =>
                prec.left(precedence, seq(
                    field('left', $._expression),
                    field('operator', operator),
                    field('right', $._expression)
                ))
            )
        ),

        unary_expression: $ => choice(...[
                ['!', PREC.NOT],
                ['~', PREC.NOT],
                ['-', PREC.NEG],
                ['+', PREC.NEG],
                ['delete', PREC.DELETE],
            ].map(([operator, precedence]) =>
                prec.left(precedence, seq(
                    field('operator', operator),
                    field('argument', $._expression)
                ))
        )),

        update_expression: $ => prec.left(PREC.INC, choice(
            seq(
                field('argument', $._expression),
                field('operator', choice('++', '--'))
            ),
            seq(
                field('operator', choice('++', '--')),
                field('argument', $._expression)
            ),
        )),

        member_expression: $ => prec.dynamic(1, seq(
            field('object', choice(
                $._expression,
                $.identifier,
            )),
            '.',
            field('property', $.identifier)
        )),

        array_access: $ => seq(
            field('base', $._expression),
            '[',
            optional(field('index', $._expression)),
            ']'
        ),

        slice_access: $ => seq(
            field('base', $._expression),
            '[',
            optional(field('from', $._expression)),
            ':',
            optional(field('to', $._expression)),
            ']'
        ),

        struct_expression: $ => seq(
            field("type", $._expression),
            "{",
            commaSep($.struct_field_assignment),
            "}"
        ),

        struct_field_assignment: $ => seq(
            field("name", $.identifier),
            ":",
            field("value", $._expression),
        ),

        parenthesized_expression: $ => prec(2, seq('(', $._expression, ')')),

        assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
            field('left', $._expression),
            '=',
            field('right', $._expression)
        )),

        augmented_assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
            field('left', $._expression),
            choice('+=', '-=', '*=', '/=', '%=', '^=', '&=', '|=', '>>=', '>>>=',
                '<<=',),
            field('right', $._expression)
        )),

        call_expression: $ => prec.right(PREC.CALL, seq(
            field("function", $._expression),
            $._call_arguments
        )),

        payable_conversion_expression: $ => seq('payable', $._call_arguments),
        type_name: $ => choice(
            $.primitive_type,
            $.user_defined_type,
            $._mapping,
            $._array_type,
            $._function_type,
        ),

        _array_type: $ => prec(1, seq($.type_name, '[', optional($._expression), ']')),

        _function_type: $ => prec.right(seq(
            'function', 
            field("parameters", $._parameter_list), 
            repeat(choice(
                $.visibility,
                $.state_mutability,
            )),
            optional($._return_parameters),
        )),

        _parameter_list: $ => seq(
            '(', commaSep($.parameter), ')'
        ),

        parameter: $ =>  seq(
            field("type", $.type_name),
            optional(field("location", $._storage_location)),
            optional(field("name", $.identifier)),
        ),

        _storage_location: $ => choice(
            'memory',
            'storage',
            'calldata'
        ),

        user_defined_type: $ => $._identifier_path,            
        
        _identifier_path: $ => prec.left(dotSep1( $.identifier)),

        _mapping: $ => seq(
            'mapping', '(', 
            field("key_type", $._mapping_key), 
            '=>', 
            field("value_type", $.type_name), 
            ')',
        ),

        primitive_type: $ => prec.left(choice(
            seq('address', optional('payable')),
            'bool',
            'string',
            'var',
            $._int,
            $._uint,
            $._bytes,
            $._fixed,
            $._ufixed,
        )),

        _int: $ => choice (
            'int', 'int8', 'int16', 'int24', 'int32', 'int40', 'int48', 'int56', 'int64', 'int72', 'int80', 'int88', 'int96', 'int104', 'int112', 'int120', 'int128', 'int136', 'int144', 'int152', 'int160', 'int168', 'int176', 'int184', 'int192', 'int200', 'int208', 'int216', 'int224', 'int232', 'int240', 'int248', 'int256'
        ),
        _uint: $ => choice (
            'uint', 'uint8', 'uint16', 'uint24', 'uint32', 'uint40', 'uint48', 'uint56', 'uint64', 'uint72', 'uint80', 'uint88', 'uint96', 'uint104', 'uint112', 'uint120', 'uint128', 'uint136', 'uint144', 'uint152', 'uint160', 'uint168', 'uint176', 'uint184', 'uint192', 'uint200', 'uint208', 'uint216', 'uint224', 'uint232', 'uint240', 'uint248', 'uint256'
        ),
        _bytes: $ => choice (
            'byte', 'bytes', 'bytes1', 'bytes2', 'bytes3', 'bytes4', 'bytes5', 'bytes6', 'bytes7', 'bytes8', 'bytes9', 'bytes10', 'bytes11', 'bytes12', 'bytes13', 'bytes14', 'bytes15', 'bytes16', 'bytes17', 'bytes18', 'bytes19', 'bytes20', 'bytes21', 'bytes22', 'bytes23', 'bytes24', 'bytes25', 'bytes26', 'bytes27', 'bytes28', 'bytes29', 'bytes30', 'bytes31', 'bytes32'
        ),

        _fixed: $ => choice (
            'fixed',
            /fixed([0-9]+)x([0-9]+)/
        ),
        _ufixed: $ => choice (
            'ufixed',
            /ufixed([0-9]+)x([0-9]+)/
        ),

        _semicolon: $ => ';',

        identifier: $ => /[a-zA-Z$_][a-zA-Z0-9$_]*/,

        number_literal: $ => seq(choice($._decimal_number, $._hex_number), optional($.number_unit)),
        _decimal_number: $ =>  choice(
            /(\d|_)+(\.(\d|_)+)?([eE](-)?(\d|_)+)?/,
            /\.(\d|_)+([eE](-)?(\d|_)+)?/,
        ),
        _hex_number: $ => prec(10, /0[xX]([a-fA-F0-9][a-fA-F0-9]?_?)+/),
        // _hex_number: $ => seq(/0[xX]/, optional(optionalDashSeparation($._hex_digit))),
        comment: $ => token(
            prec(PREC.COMMENT,
                choice(
                    seq('//', /([^\r\n])*/),
                    seq(
                        '/*',
                        /[^*]*\*+([^/*][^*]*\*+)*/,
                        '/'
                    )
                )
            )
        ),
    }
  }
);

function dotSep1(rule) {
    return seq(
        rule,
        repeat(
            seq(
                '.',
                rule
            )
        ),
    );
}

function dotSep(rule) {
    return optional(dotSep1(rule))
}

function commaSep1(rule) {
    return seq(
        rule,
        repeat(
            seq(
                ',',
                rule
            )
        ),
        optional(','),
    );
}

function commaSep(rule) {
    return optional(commaSep1(rule));
}

function optionalDashSeparation(rule) {
    return seq(
        rule,
        repeat(
            seq(
                optional('_'),
                rule
            )
        ),
    );
}
