test/corpus/enums.txt
================================================================================
Enum Declarations
================================================================================

enum example {
    option1,
    option2,
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_value))
      (enum_value)))

================================================================================
Enum Declarations One Option
================================================================================
enum example {
    oneOption
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_value))))
