test/corpus/error.txt
================================================================================
Error Declaration
================================================================================

error Something(uint a);

--------------------------------------------------------------------------------

(source_file
  (error_declaration
    (identifier)
    (error_parameter
      (type_name
        (primitive_type))
      (identifier))))

================================================================================
Revert with custom error
================================================================================

function test() {
  revert Error();
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (function_body
      (statement
        (revert_statement
          (expression
            (identifier))
          (revert_arguments))))))

================================================================================
Revert regularly
================================================================================

function test() {
  revert(variableName);
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (function_body
      (statement
        (revert_statement
          (expression
            (parenthesized_expression
              (expression
                (identifier)))))))))

================================================================================
Very old revert
================================================================================

function test() {
  revert;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (function_body
      (statement
        (revert_statement)))))
