test/corpus/fallback_receive.txt
================================================================================
Function Fallback
================================================================================

contract Example {
    fallback () {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (fallback_receive_definition
        body: (function_body)))))

================================================================================
Function Fallback
================================================================================

contract Example {
    receive () {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (fallback_receive_definition
        body: (function_body)))))

================================================================================
Function Fallback with modifiers and visibility
================================================================================

contract Example {
    receive () onlyOwner virtual override(param) {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (fallback_receive_definition
        (modifier_invocation
          (identifier))
        (virtual)
        (override_specifier
          (user_defined_type
            (identifier)))
        body: (function_body)))))
